<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.phone.pe.ui.MainActivity">

    <ImageView
        android:id="@+id/gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/congratulations"
            android:textColor="@color/purple_200"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/redeem_desc"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <cn.iwgang.countdownview.CountdownView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:isHideTimeBackground="true"
                    app:isShowDay="false"
                    app:isShowHour="true"
                    app:isShowMillisecond="false"
                    app:isShowMinute="false"
                    app:isShowSecond="false"
                    app:isTimeTextBold="true"
                    app:suffixHour=" "
                    app:timeBgColor="@android:color/transparent"
                    app:timeTextColor="@color/purple_200"
                    app:timeTextSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/hours"
                    tools:ignore="SmallSp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp5"
                android:layout_marginEnd="@dimen/dp5"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp5"
                android:paddingEnd="@dimen/dp5">

                <cn.iwgang.countdownview.CountdownView
                    android:id="@+id/minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:isHideTimeBackground="true"
                    app:isShowDay="false"
                    app:isShowHour="false"
                    app:isShowMillisecond="false"
                    app:isShowMinute="true"
                    app:isShowSecond="false"
                    app:isTimeTextBold="true"
                    app:suffixMinute=" "
                    app:timeBgColor="@android:color/transparent"
                    app:timeTextColor="@color/purple_200"
                    app:timeTextSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/minutes"
                    tools:ignore="SmallSp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp5"
                android:layout_marginEnd="@dimen/dp5"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp5"
                android:paddingEnd="@dimen/dp5">

                <cn.iwgang.countdownview.CountdownView
                    android:id="@+id/seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:isHideTimeBackground="true"
                    app:isShowDay="false"
                    app:isShowHour="false"
                    app:isShowMillisecond="false"
                    app:isShowMinute="false"
                    app:isShowSecond="true"
                    app:isTimeTextBold="true"
                    app:suffixSecond=" "
                    app:timeBgColor="@android:color/transparent"
                    app:timeTextColor="@color/purple_200"
                    app:timeTextSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/seconds"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:background="@drawable/button_bg"
        android:text="@string/send_prize_money_in_bank"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>